@@ -1,34 +1,68 @@
 plugins {
     id 'application'
-    id 'airbyte-docker'
-    id 'airbyte-integration-test-java'
+    id 'airbyte-java-connector'
 }
+
+airbyteJavaConnector {
+    cdkVersionRequired = '0.48.1'
+    features = ['db-destinations', 's3-destinations']
+    useLocalCdk = false
+}
+
+airbyteJavaConnector.addCdkDependencies()
 
 application {
-    mainClass = 'io.airbyte.integrations.destination.s3.S3Destination'
+    mainClass = 'io.airbyte.integrations.destination.s3.S3DestinationRunner'
+    applicationDefaultJvmArgs = ['-XX:+ExitOnOutOfMemoryError', '-XX:MaxRAMPercentage=75.0']
+
+    // uncomment and replace to run locally
+    //applicationDefaultJvmArgs = ['-XX:+ExitOnOutOfMemoryError', '-XX:MaxRAMPercentage=75.0', '--add-opens', 'java.base/java.lang=ALL-UNNAMED']
+    applicationDefaultJvmArgs = [
+            '-XX:+ExitOnOutOfMemoryError', '-XX:MaxRAMPercentage=75.0'
+//            Uncomment to enable remote profiling:
+//            '-XX:NativeMemoryTracking=detail',
+//            '-Djava.rmi.server.hostname=localhost',
+//            '-Dcom.sun.management.jmxremote=true',
+//            '-Dcom.sun.management.jmxremote.port=6000',
+//            '-Dcom.sun.management.jmxremote.rmi.port=6000',
+//            '-Dcom.sun.management.jmxremote.local.only=false',
+//            '-Dcom.sun.management.jmxremote.authenticate=false',
+//            '-Dcom.sun.management.jmxremote.ssl=false',
+    ]
+
+    // Uncomment and replace to run locally
+    //applicationDefaultJvmArgs = ['-XX:+ExitOnOutOfMemoryError', '-XX:MaxRAMPercentage=75.0', '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED', '--add-opens', 'java.base/sun.security.action=ALL-UNNAMED', '--add-opens', 'java.base/java.lang=ALL-UNNAMED']
 }
 
+// uncomment to run locally
+//run {
+//    standardInput = System.in
+//}
+
 dependencies {
-    implementation project(':airbyte-config:models')
-    implementation project(':airbyte-protocol:models')
-    implementation project(':airbyte-integrations:bases:base-java')
-    implementation project(':airbyte-integrations:connectors:destination-jdbc')
-    implementation files(project(':airbyte-integrations:bases:base-java').airbyteDocker.outputs)
 
     // csv
-    implementation 'com.amazonaws:aws-java-sdk-s3:1.11.978'
-    implementation 'org.apache.commons:commons-csv:1.4'
-    implementation 'com.github.alexmojaki:s3-stream-upload:2.2.2'
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.772'
+    implementation 'com.amazonaws:aws-java-sdk-iam:1.12.772'
+    implementation 'org.apache.commons:commons-csv:1.11.0'
+    implementation 'com.github.alexmojaki:s3-stream-upload:2.2.4'
 
     // parquet
-    implementation group: 'org.apache.hadoop', name: 'hadoop-common', version: '3.3.0'
-    implementation group: 'org.apache.hadoop', name: 'hadoop-aws', version: '3.3.0'
-    implementation group: 'org.apache.hadoop', name: 'hadoop-mapreduce-client-core', version: '3.3.0'
-    implementation group: 'org.apache.parquet', name: 'parquet-avro', version: '1.12.0'
-    implementation group: 'tech.allegro.schema.json2avro', name: 'converter', version: '0.2.10'
-
-    testImplementation 'org.apache.commons:commons-lang3:3.11'
-
-    integrationTestJavaImplementation project(':airbyte-integrations:bases:standard-destination-test')
-    integrationTestJavaImplementation project(':airbyte-integrations:connectors:destination-s3')
+    implementation ('org.apache.hadoop:hadoop-common:3.4.0') {
+        exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+        exclude group: 'org.slf4j', module: 'slf4j-reload4j'
+        exclude group: 'org.apache.zookeeper'
+    }
+    implementation ('org.apache.hadoop:hadoop-aws:3.4.0') { exclude group: 'org.slf4j', module: 'slf4j-log4j12'}
+    implementation ('org.apache.hadoop:hadoop-mapreduce-client-core:3.4.0') {
+        exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+        exclude group: 'org.slf4j', module: 'slf4j-reload4j'
+        exclude group: 'org.apache.zookeeper'
+    }
+    implementation ('org.apache.parquet:parquet-avro:1.14.2') { exclude group: 'org.slf4j', module: 'slf4j-log4j12'}
+    implementation ('com.github.airbytehq:json-avro-converter:1.1.3') { exclude group: 'ch.qos.logback', module: 'logback-classic'}
+    implementation group: 'com.hadoop.gplcompression', name: 'hadoop-lzo', version: '0.4.20'
+    testImplementation 'org.apache.commons:commons-lang3:3.17.0'
+    testImplementation 'org.xerial.snappy:snappy-java:1.1.10.7'
+    testImplementation "org.mockito:mockito-inline:5.2.0"
 }
